--- a/HW13.md
+++ b/HW13.md
@@ -1,3 +1,6 @@
+## HomeWork 13 
+Резервное копирование и восстановление
+
 * Создаем базу данных и таблицу:
 
   `create database otus; \c otus`
@@ -21,13 +24,13 @@
   
   create table customers_full(id INT, fio TEXT);
   
-   \copy customers_full from '~/backup/cust.sql';
+   \copy customers_full from '/opt/backups/cust.sql';
   ```
 * Создаем бэкап с помощью pg_dump и переносим  таблицу `` новую базу:
 ```
-  pg_dump -d otus --create -U postgres -Fc > /opt/backups
+  pg_dump -d otus --create -U postgres -Fc > /opt/backups/cust2023.sql.gz
   
   create database customers2023;
   
-  pg_restore -d customers2023 -t customers_full -U postgres ~/backup/cust.sql
+  pg_restore -d customers2023 -t customers_full -U postgres ~/backup/cust2023.sql.gz
 ```
