--- a/HW13.md
+++ b/HW13.md
@@ -26,7 +26,7 @@
   
    \copy customers_full from '/opt/backups/cust.sql';
   ```
-* Создаем бэкап с помощью pg_dump и переносим  таблицу `` новую базу:
+* Создаем бэкап с помощью pg_dump и переносим  таблицу 2 `customers_full` новую базу:
 ```
   pg_dump -d otus --create -U postgres -Fc > /opt/backups/cust2023.sql.gz
   
