--- a/HW10.md
+++ b/HW10.md
@@ -24,13 +24,24 @@
    UPDATE accounts SET amount = amount + 100.00 WHERE acc_no = 1;
    SELECT locktype, relation::REGCLASS, virtualxid AS virtxid, transactionid AS xid, mode, granted FROM pg_locks WHERE pid = ****;
    ```
-      locktype |   relation    | virtxid | xid |       mode       | granted
----------------|---------------|---------|-----|------------------|---------
- relation      | pg_locks      |         |     | AccessShareLock  | t
- relation      | accounts_pkey |         |     | RowExclusiveLock | t
- relation      | accounts      |         |     | RowExclusiveLock | t
- virtualxid    |               | 4/29    |     | ExclusiveLock    | t
- transactionid |               |         | 742 | ExclusiveLock    | t
+   #### Первый терминал
+   * pg_locks - AccessShareLock появилась из-за чтения pg_locks для PID 2-х других транзакций
+   * accounts_pkey - RowExclusiveLock такую блокировку получает любпя команда которая изменяет таблицу, в данном случаи это блокировка индекса 
+   * accounts - RowExclusiveLock такую блокировку получает любпя команда которая изменяет таблицу
+   * virtualxid - Виртуальный идентификатор транзакции, появился из-за чтения pg_lock
+   * transactionid - Идентификатор транзакции которая является целью блокировки, появляется из-за опрации записи
+   -------------------------------------------------------------------
+   locktype |  relation    | virtxid | xid |       mode       | granted
+   --------------|---------------|---------|-----|------------------|---------
+   relation      | pg_locks      |         |     | AccessShareLock  | t
+   relation      | accounts_pkey |         |     | RowExclusiveLock | t
+   relation      | accounts      |         |     | RowExclusiveLock | t
+   virtualxid    |               | 4/29    |     | ExclusiveLock    | t
+   transactionid |               |         | 742 | ExclusiveLock    | t
+
+   #### Второй терминал
+   * tuple - ExclusiveLock 2-я транзакция попробовала наложить блокировку на строку но у нее не получилось так как первая транзакция уже наложила свою блокировку
+ -----------------------------------------------------------------------------
 
    locktype    |   relation    | virtxid | xid |       mode       | granted
 ---------------|---------------|---------|-----|------------------|---------
@@ -40,6 +51,10 @@
  transactionid |               |         | 746 | ExclusiveLock    | t
  tuple         | accounts      |         |     | ExclusiveLock    | f
 
+  #### Третий терминал
+  * tuple - ExclusiveLock 3-я транзакция попробовала наложить блокировку на строку но у нее не получилось так как первая транзакция уже наложила свою блокировку
+ ----------------------------------------------------------------------------
+
    locktype    |   relation    | virtxid | xid |       mode       | granted
 ---------------|---------------|---------|-----|------------------|---------
  relation      | accounts_pkey |         |     | RowExclusiveLock | t
@@ -48,6 +63,9 @@
  transactionid |               |         | 745 | ExclusiveLock    | t
  tuple         | accounts      |         |     | ExclusiveLock    | f
 
-5. Воспроизведите взаимоблокировку трех транзакций. Можно ли разобраться в ситуации постфактум, изучая журнал сообщений?
 
-6. Могут ли две транзакции, выполняющие единственную команду UPDATE одной и той же таблицы (без where), заблокировать друг друга?
+
+5. Воспроизведите взаимоблокировку трех транзакций. Можно ли разобраться в ситуации постфактум, изучая журнал сообщений?
+   
+
+7. Могут ли две транзакции, выполняющие единственную команду UPDATE одной и той же таблицы (без where), заблокировать друг друга?
