--- a/HW10.md
+++ b/HW10.md
@@ -66,6 +66,19 @@
 
 
 5. Воспроизведите взаимоблокировку трех транзакций. Можно ли разобраться в ситуации постфактум, изучая журнал сообщений?
-   
-
+   Ответ:
+   Если в 3-х транзакциях выполнить `UPDATE accounts SET amount = amount + 100.00 WHERE acc_no = 1;` а потом
+   в 1-ой транзакции выполнить `UPDATE accounts SET amount = amount + 100 WHERE acc_no = 2;` то произойдет deadlock
+   это будет видно в журнале сообщений
+  
 7. Могут ли две транзакции, выполняющие единственную команду UPDATE одной и той же таблицы (без where), заблокировать друг друга?
+
+   Ответ:
+   Могут если в таблице будет только одна запись
+
+   
+Задание со звездочкой*
+```
+ \c locks
+   UPDATE accounts SET amount = amount + 100.00 WHERE acc_no = 1; # Первый терминал
+   UPDATE accounts SET amount = amount + 100.00 WHERE acc_no = 1; # Второй терминал
