--- a/HW14.md
+++ b/HW14.md
@@ -20,9 +20,9 @@
   ```
   host    all             all             10.128.0.0/24           trust
   ```
-Перезагрузим все кластера PosstgreSQL
+* Перезагрузим все кластера PosstgreSQL
 
-На всех ВМ создадим таблицы test и test2
+* На всех ВМ создадим таблицы test и test2
 
 ```
 CREATE TABLE test as
@@ -37,22 +37,22 @@ select
 
 ```
 
-На ВМ1 создадим публикацию:
+* На ВМ1 создадим публикацию:
 
-create publication test_pub for table public.test;
+`create publication test_pub for table public.test;`
 
-На ВМ2 создадим публикацию:
+* На ВМ2 создадим публикацию:
 
-create publication test_pub for table public.test2;
+`create publication test_pub for table public.test2;`
 
-На ВМ1 создадим подписку на otus2
+* На ВМ1 создадим подписку на otus2
 ```
 create subscription test_sub
 connection 'host=otus2 port=5432 user=postgres dbname=postgres'
 publication test_pub with (copy_data = false);
 ```
 
-Так же создадим подписку на otus1 на ВМ2
+* Так же создадим подписку на otus1 на ВМ2
 
 ```
 create subscription test_sub
@@ -60,7 +60,7 @@ connection 'host=otus1 port=5432 user=postgres dbname=postgres'
 publication test_pub with (copy_data = false);
 
 ```
-На ВМ3 создадим подписки на otus1 и otus2
+* На ВМ3 создадим подписки на otus1 и otus2
 
 ```
 create subscription test_sub1
@@ -72,7 +72,7 @@ connection 'host=otus2 port=5432 user=postgres dbname=postgres'
 publication test_pub with (copy_data = false);
 
 ```
-Проверяем работает ли кластер
+* Проверяем работает ли кластер
 
 * На otus1 `insert into test(id, point) values(11, 'тест1');`
 * На otus2 `insert into test2(id, point) values(11, 'тест2');`
@@ -114,5 +114,5 @@ publication test_pub with (copy_data = false);
   (11 rows)
    ```
 
-
+Все работает
 
