--- a/HW19.md
+++ b/HW19.md
@@ -1,9 +1,30 @@
 ## Сбор и использование статистики
 
-#### Для тестов возьмем БД demo small 
+#### Для тестов возьмем БД demo small демонстрационную базу данных для PostgreSQL
 
 * Реализовать прямое соединение двух или более таблиц
+  Комментарий: Найдем имена всех пассажиров на определенных рейсах
+  Структура таблиц 
+  #### bookings.ticket_flights
+  
+  |     Column      |         Type          | Collation | Nullable |
+  |-----------------|-----------------------|-----------|----------|
+  | ticket_no       | character(13)         |           | not null |
+  | flight_id       | integer               |           | not null |
+  | fare_conditions | character varying(10) |           | not null |
+  | amount          | numeric(10,2)         |           | not null |
+  
+  #### bookings.tickets
+  
+  |      Column     |         Type          | Collation | Nullable |
+  | ----------------|-----------------------|-----------|----------|
+  | ticket_no      | character(13)         |           | not null |
+  | book_ref       | character(6)          |           | not null |
+  | passenger_id   | character varying(20) |           | not null |
+  | passenger_name | text                  |           | not null |
+  | contact_data   | jsonb                 |           |          |
 
+ Решение
 ```
 
 select tf.flight_id, t.passenger_name from ticket_flights tf
@@ -11,11 +32,60 @@ join tickets t on tf.ticket_no = t.ticket_no
 
 ```
 
-* Реализовать левостороннее (или правостороннее)
+* Реализовать левостороннее
   соединение двух или более таблиц
+  
+  Комментарий: Вибираеи все перелеты которые осуществил пассажир с номером билета '0005432661915' и предстоящие
+  
+  #### bookings.boarding_passes
+  
+   |    Column    |         Type         | Collation | Nullable |
+   |-------------|----------------------|-----------|----------|
+   | ticket_no   | character(13)        |           | not null |
+   | flight_id   | integer              |           | not null |
+   | boarding_no | integer              |           | not null |
+   | seat_no     | character varying(4) |           | not null |
 
+ Решение
+ 
+```
+SELECT   to_char(f.scheduled_departure, 'DD.MM.YYYY') as when,
+         f.departure_airport,
+         f.arrival_airport,
+         f.status,
+         bp.seat_no
+FROM     ticket_flights tf
+         JOIN flights f ON tf.flight_id = f.flight_id
+         LEFT JOIN boarding_passes bp ON tf.flight_id = bp.flight_id
+                                     AND tf.ticket_no = bp.ticket_no
+WHERE    tf.ticket_no = '0005432661915'
+ORDER BY f.scheduled_departure;
+
+```
+
+* Реализовать кросс соединение двух или более таблиц
+  Комментарий: Выберем все модели самолетов осуществлявших определенные рейсы
+  
+  #### bookings.aircrafts
+  
+   | Column     |     Type     | Collation | Nullable | 
+   |--------------|--------------|-----------|----------|
+   | aircraft_code | character(3) |           | not null |
+   | model         | text         |           | not null |
+   | range         | integer      |           | not null |
+ 
+  Решение
   ```
-  select f.flight_id, a.airport_name, a.city  from flights f 
-  left join airports a on a.airport_code = f.arrival_airport 
-  where 
+  select f.flight_id, f.flight_no, ac.aircraft_code, ac.model from flights f 
+  cross join aircrafts ac
+  ```
+
+* Реализовать полное соединение двух или более таблиц
+  Комментарий: Запрос возвращающий всех пассажиров на всех рейсах
+  
+  ```
+  select f.flight_id, flight_no, f.status, tf.fare_conditions, t.passenger_name
+  from flights f 
+  full outer join ticket_flights tf on tf.flight_id = f.flight_id 
+  full outer join tickets t on t.ticket_no = tf.ticket_no 
   ```
