--- a/HW19.md
+++ b/HW19.md
@@ -73,6 +73,20 @@ ORDER BY f.scheduled_departure;
    | aircraft_code | character(3) |           | not null |
    | model         | text         |           | not null |
    | range         | integer      |           | not null |
+
+  #### bookings.flights
+  |         Column        |           Type           | Collation | Nullable |
+  |---------------------|--------------------------|-----------|----------|
+  | flight_id           | integer                  |           | not null | 
+  | flight_no           | character(6)             |           | not null |
+  | scheduled_departure | timestamp with time zone |           | not null |
+  | scheduled_arrival   | timestamp with time zone |           | not null |
+  |  departure_airport   | character(3)             |           | not null |
+  |  arrival_airport     | character(3)             |           | not null |
+  | status              | character varying(20)    |           | not null |
+  | aircraft_code       | character(3)             |           | not null |
+  | actual_departure    | timestamp with time zone |           |          |
+  | actual_arrival      | timestamp with time zone |           |          |
  
   Решение
   ```
@@ -82,10 +96,31 @@ ORDER BY f.scheduled_departure;
 
 * Реализовать полное соединение двух или более таблиц
   Комментарий: Запрос возвращающий всех пассажиров на всех рейсах
-  
+  Решение
   ```
   select f.flight_id, flight_no, f.status, tf.fare_conditions, t.passenger_name
   from flights f 
   full outer join ticket_flights tf on tf.flight_id = f.flight_id 
   full outer join tickets t on t.ticket_no = tf.ticket_no 
+  ```
+
+ * Реализовать запрос, в котором будут использованы
+   разные типы соединений
+   Комментарий: сделаем список всех бронирований с именами пассажиров, местами и статусом
+   Решение
+  ```
+  SELECT   b.book_ref,
+         t.ticket_no,
+         t.passenger_id,
+         t.passenger_name,
+         tf.fare_conditions,
+         f.status,
+         bp.seat_no
+  FROM     bookings b
+         JOIN tickets t ON b.book_ref = t.book_ref
+         JOIN ticket_flights tf ON tf.ticket_no = t.ticket_no
+         JOIN flights f ON tf.flight_id = f.flight_id
+         LEFT JOIN boarding_passes bp ON tf.flight_id = bp.flight_id
+                                     AND tf.ticket_no = bp.ticket_no
+   ORDER BY t.ticket_no, f.scheduled_departure;
   ```
