--- a/HW20.md
+++ b/HW20.md
@@ -29,10 +29,11 @@ ALTER TABLE flights_2017_09 ADD CHECK (scheduled_departure::date BETWEEN DATE '2
   CTREATE OR REPLACE FUNCTION flights_select_part() RETURNS TRIGGER AS $$
   BEGIN
   IF new.scheduled_departure::date BETWEEN date '2017-07-01' AND DATE '2017-08-01' - 1 THEN
-  INSERT INTO flights_2017_07 values (new.*);
+      INSERT INTO flights_2017_07 values (new.*);
   ELSEIF new.scheduled_departure::date BETWEEN date '2017-08-01' AND DATE '2017-09-01' - 1 THEN
-  INSERT INTO flights_2017_08 VALUES (new.*);
+      INSERT INTO flights_2017_08 VALUES (new.*);
   ELSEIF new.scheduled_departure::date BETWEEN date '2017-09-01' AND DATE '2017-10-01' - 1 THEN INSERT INTO flights_2017_09 VALUES (new.*);
+  
   ELSE RAISE EXCEPTION 'this date not in your partitions. add partition';
   END IF;
   RETURN NULL;
@@ -51,10 +52,10 @@ ALTER TABLE flights_2017_09 ADD CHECK (scheduled_departure::date BETWEEN DATE '2
  ```
 * Внесем новые данные в таблицу flights :
 
-`INSERT INTO flights values (1111, 'PG013', date '2017-09-11', date '2017-09-12', 'DME', 'BTK', 'Scheduled', 312);`
+`INSERT INTO flights VALUES (1111, 'PG013', date '2017-09-11', date '2017-09-12', 'DME', 'BTK', 'Scheduled', 312);`
 
 Проверим появились ли они в таблице flights_2017_09
-`select * from flights_2017_09 \gx`
+`SELECT * FROM flights_2017_09 \gx`
 
 ```
 flight_id           | 1111
@@ -72,7 +73,7 @@ actual_arrival      |
 
 ### Данные появились, проверим скорость поиска с помощью EXPLAIN ANALYZE
 
-`explain analyze select * from flights where scheduled_departure::date = '2017-07-05'`
+`EXPLAIN ANALYZE SELECT * FROM flights WHERE scheduled_departure::date = '2017-07-05'`
 
 Получаем вывод
 
