--- a/HW20.md
+++ b/HW20.md
@@ -26,7 +26,7 @@ ALTER TABLE flights_2017_09 ADD CHECK (scheduled_departure::date BETWEEN DATE '2
 * Создадим функцию для добавления новых данных в партицию:
   
   ```
-  CTREATE OR REPLACE FUNCTION flights_select_part() RETURNS TRIGGER AS $$
+  CREATE OR REPLACE FUNCTION flights_select_part() RETURNS TRIGGER AS $$
   BEGIN
   IF new.scheduled_departure::date BETWEEN date '2017-07-01' AND DATE '2017-08-01' - 1 THEN
       INSERT INTO flights_2017_07 values (new.*);
