--- a/HW20.md
+++ b/HW20.md
@@ -45,11 +45,25 @@ ALTER TABLE flights_2017_09 ADD CHECK (scheduled_departure::date BETWEEN DATE '2
  Далее создадим триггер на запуск функции перед вставкой в таблицу flights:
 
  ```
+
  CREATE TRIGGER check_date_fligths
  BEFORE INSERT ON flights
  FOR EACH ROW EXECUTE PROCEDURE flights_select_part();
 
  ```
+
+* Внесем данные в новые таблицы
+  
+  ```
+  
+  INSERT INTO flights_2017_07 SELECT * FROM flights WHERE scheduled_departure::date BETWEEN DATE '2017-07-01' AND DATE '2017-08-01' - 1;
+  
+  INSERT INTO flights_2017_08 SELECT * FROM flights WHERE scheduled_departure::date BETWEEN DATE '2017-08-01' AND DATE '2017-09-01' - 1;
+  
+  INSERT INTO flights_2017_09 SELECT * FROM flights WHERE scheduled_departure::date BETWEEN DATE '2017-09-01' AND DATE '2017-10-01' - 1;
+
+  ```
+  
 * Внесем новые данные в таблицу flights :
 
 `INSERT INTO flights VALUES (1111, 'PG013', date '2017-09-11', date '2017-09-12', 'DME', 'BTK', 'Scheduled', 312);`
@@ -79,19 +93,21 @@ actual_arrival      |
 Получаем вывод
 
 ```
-Append  (cost=0.00..938.12 rows=172 width=67) (actual time=6.032..6.034 rows=0 loops=1)
-   ->  Seq Scan on flights flights_1  (cost=0.00..888.82 rows=166 width=63) (actual time=6.009..6.010 rows=0 loops=1)
+Append  (cost=0.00..1781.29 rows=331 width=63) (actual time=41.998..42.004 rows=0 loops=1)
+   ->  Seq Scan on flights flights_1  (cost=0.00..888.82 rows=166 width=63) (actual time=20.169..20.170 rows=0 loops=1)
          Filter: ((scheduled_departure)::date = '2017-07-05'::date)
          Rows Removed by Filter: 33121
-   ->  Seq Scan on flights_2017_07 flights_2  (cost=0.00..16.15 rows=2 width=170) (actual time=0.014..0.015 rows=0 loops=1)
+   ->  Seq Scan on flights_2017_07 flights_2  (cost=0.00..238.35 rows=43 width=63) (actual time=5.972..5.972 rows=0 loops=1)
          Filter: ((scheduled_departure)::date = '2017-07-05'::date)
-   ->  Seq Scan on flights_2017_08 flights_3  (cost=0.00..16.15 rows=2 width=170) (actual time=0.001..0.001 rows=0 loops=1)
+         Rows Removed by Filter: 8690
+   ->  Seq Scan on flights_2017_08 flights_3  (cost=0.00..451.52 rows=84 width=63) (actual time=12.018..12.018 rows=0 loops=1)
          Filter: ((scheduled_departure)::date = '2017-07-05'::date)
-   ->  Seq Scan on flights_2017_09 flights_4  (cost=0.00..16.15 rows=2 width=170) (actual time=0.002..0.002 rows=0 loops=1)
+         Rows Removed by Filter: 16835
+   ->  Seq Scan on flights_2017_09 flights_4  (cost=0.00..200.94 rows=38 width=65) (actual time=3.828..3.828 rows=0 loops=1)
          Filter: ((scheduled_departure)::date = '2017-07-05'::date)
- Planning Time: 0.975 ms
- Execution Time: 6.099 ms
-
+         Rows Removed by Filter: 7596
+ Planning Time: 1.577 ms
+ Execution Time: 42.060 ms
 ```
 
 Удалим все партиции в выполним тот же запрос получим
