--- a/HW20.md
+++ b/HW20.md
@@ -42,15 +42,15 @@ ALTER TABLE flights_2017_09 ADD CHECK (scheduled_departure::date BETWEEN DATE '2
   
   ```
   
- Далее создадим триггер на запуск функции перед вставкой в таблицу flights:
+* Далее создадим триггер на запуск функции перед вставкой в таблицу flights:
 
- ```
+  ```
 
- CREATE TRIGGER check_date_fligths
- BEFORE INSERT ON flights
- FOR EACH ROW EXECUTE PROCEDURE flights_select_part();
+  CREATE TRIGGER check_date_fligths
+  BEFORE INSERT ON flights
+  FOR EACH ROW EXECUTE PROCEDURE flights_select_part();
 
- ```
+  ```
 
 * Внесем данные в новые таблицы
   
