--- a/HW20.md
+++ b/HW20.md
@@ -121,5 +121,5 @@ Seq Scan on flights  (cost=0.00..888.82 rows=166 width=63) (actual time=216.062.
 ```
 
 Вывод:
-Партиционирование даже такой относительно небольшой таблицы дает кратный прирост скорости выборки данных, но так же есть риски неправильного создания функций обработки или триггеров.
+Даже самый простой вариант партиционирование таблицы по датам дает кратный прирост скорости выборки данных, но так же есть риски неправильного создания функций обработки или триггеров.
 
